# rkv

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md  bench.Dockerfile  codecov.yml
.github/workflows/: coverage.yml  test.yml
benches/: store_benchmark.rs
benchmarks/0/base/: estimates.json
benchmarks/0/report/: index.html
benchmarks/1/new/: tukey.json
benchmarks/3/new/: benchmark.json
benchmarks/3/report/: index.html
benchmarks/4/base/: benchmark.json  estimates.json
reports/store.get-for-1000000-keys-in-10-sstable(s)/0/base/: sample.json
reports/store.get-for-1000000-keys-in-10-sstable(s)/1/base/: estimates.json
reports/store.get-for-1000000-keys-in-10-sstable(s)/1/new/: benchmark.json
reports/store.get-for-1000000-keys-in-10-sstable(s)/report/: index.html
scripts/: cloud_bench.sh  cloud_benchmarks.sh
src/: lib.rs
src/sstable/: constants.rs  mod.rs  sst.rs  sstable.rs  sstable_test.rs
src/store/: lsm_store.rs  mod.rs  store.rs  store_test.rs
src/utils/: futil.rs  mod.rs
store.get-for-1000000-keys-in-10-sstable(s)/0/base/: benchmark.json  tukey.json
store.get-for-1000000-keys-in-10-sstable(s)/1/base/: sample.json
store.get-for-1000000-keys-in-10-sstable(s)/2/base/: tukey.json
store.get-for-1000000-keys-in-10-sstable(s)/2/new/: sample.json
store.get-for-1000000-keys-in-10-sstable(s)/2/report/: index.html
store.get-for-1000000-keys-in-10-sstable(s)/3/new/: estimates.json
store.get-for-1000000-keys-in-10-sstable(s)/4/base/: tukey.json
store.get-for-1000000-keys-in-10-sstable(s)/4/new/: sample.json
(+6 files in other folders)
